pfstools 2.0.3 <?>
	* fixed: permission issues in the cmake scripts
	* fixed: Out-of-source compilation issues in octave (thanks to Tomas)
	* added: pfsoutexr has new --float32 option to store color as 32-bit float
	* upated: pfsoutexr assumes --fix-halfmax as default and has additional switch --clamp-halfmax to disable this behavior

pfstools 2.0.2 <08.03.2015>
	* fixed: Fixed build and install scripts for hdrhtml
	* fixed: Fixed building FFT solver for pfstmo_fattal02
	* updated: Added check for libexif
	* updated: improvements in pfstmo_ferradans11 to produce brighter results
	* updated: Updated some manual pages

pfstools 2.0.1 <07.01.2015>
	* added: new tone-mapping operator "pfstmo_ferradans11" (thanks to Sira)

pfstools 2.0.0 <06.12.2014>
	* added: Starting from pfstools 2.0.0, pfstmo and pfscalibration are included in the pfstools source package
	* changed: support for automake dropped in favour of cmake
	* fixed: pfsinpfm and pfsoutpfm now handle both big and little endian files correctly
	* fixed: pfsinpfm and pfsoutpfm do not flip images (top-bottom)
	* added: new tone-mapping operator: pfstmo_mai11
	* changed: Thoroughly updated README files
	* fixed: several issues with octave scripts (compatibility with newer Octave releases), in particular pfs_write_rgb

pfstools 1.9.0 <17.09.2014>
	* added: CMake build system (to replace automake in future releases)
	* changed: pfsinrgbe & pfsoutrgbe do not correct for Radiance WHITE_EFFICACY by default. Note that this makes absolute values stored in .hdr files using earlier pfstools version smaller then they should be. Check manual pages for pfsinrgbe.
	* added: pfsretime - simple frame duplication
	* added: pfscolortransform - color calibration
	* updated: pfsglview contains many improvement and multithreading (thanks to Oliver Barth)
	* updated: pfsview is multithreaded if openmp present